Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-31226

QQmlPropertyMap.insert() fails when QQmlPropertyMap was instantiated from QML

XMLWordPrintable

      Instantiating QQmlPropertyMap from C++ and calling the insert() method works well.
      Instantiating QQmlPropertyMap from QML (after having registered the type) and calling the insert() method fails and only the key of the inserted property is inserted, not the value.

      Please see the attached minimal test program that illustrates the difference:
      bugQQmlPropertyMap.zip

        For Gerrit Dashboard: QTBUG-31226
        # Subject Branch Project Status CR V

            shausman Simon Hausmann
            kaleo Florian Boucault
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes